[gd_scene load_steps=2 format=3 uid="uid://0ve3pyo10j0q"]

[ext_resource type="Script" path="res://Sort/sorting.gd" id="1_12ovw"]

[node name="Main" type="Node"]
script = ExtResource("1_12ovw")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ElemContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 250.0
offset_right = 1550.0
offset_bottom = 750.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ElemContainer"]
custom_minimum_size = Vector2(1500, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 60.0
offset_right = 450.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 30
placeholder_text = "How many elements"
wrap_mode = 1
caret_blink = true

[node name="Seed" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 500.0
offset_top = 60.0
offset_right = 900.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 30
placeholder_text = "Rng Seed"

[node name="TimeSeedCheck" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 950.0
offset_top = 60.0
offset_right = 1250.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 30
text = "Use Time as Seed"

[node name="Info" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 775.0
offset_right = 1550.0
offset_bottom = 865.0
theme_override_font_sizes/font_size = 30

[node name="Generate" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1350.0
offset_top = 60.0
offset_right = 1550.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 30
text = "Generate"

[node name="QuickSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "Quick"

[node name="BubbleSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 250.0
offset_top = 150.0
offset_right = 400.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "Bubble"

[node name="InsertSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 450.0
offset_top = 150.0
offset_right = 600.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "Insert"

[node name="BinsertSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 650.0
offset_top = 150.0
offset_right = 800.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "B-Insert"

[node name="SelectSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 850.0
offset_top = 150.0
offset_right = 1000.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "Select"

[node name="HeapSort" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1050.0
offset_top = 150.0
offset_right = 1200.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "Heap"

[node name="DesCheck" type="CheckBox" parent="Panel"]
layout_mode = 0
offset_left = 1450.0
offset_top = 150.0
offset_right = 1550.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 30
text = "DES"

[connection signal="pressed" from="Panel/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="Panel/QuickSort" to="." method="_on_quick_sort_pressed"]
[connection signal="pressed" from="Panel/BubbleSort" to="." method="_on_bubblesort_pressed"]
[connection signal="pressed" from="Panel/InsertSort" to="." method="_on_insert_sort_pressed"]
[connection signal="pressed" from="Panel/BinsertSort" to="." method="_on_binsert_sort_pressed"]
[connection signal="pressed" from="Panel/SelectSort" to="." method="_on_select_sort_pressed"]
[connection signal="pressed" from="Panel/HeapSort" to="." method="_on_heap_sort_pressed"]
